--- a/IntroduccionJS/index.html
+++ b/IntroduccionJS/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hola Mundo >_<
-    <script src="01-tipos/09-argumentos.js"></script>
+    <script src="03-control-flujo/02-else.js"></script>
 </body>
 </html>
